--- a/DiningRoom/DiningRoomModel/DiningRoom-Model.csproj
+++ b/DiningRoom/DiningRoomModel/DiningRoom-Model.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{7A138130-5806-4C2B-82EF-A13E134A76D7}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DiningRoomModel</RootNamespace>
+    <RootNamespace>DinnerSimulator.DiningRoom.Model.Actors</RootNamespace>
     <AssemblyName>DiningRoomModel</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -45,11 +45,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Actors\Customer.cs" />
+    <Compile Include="Actors\CustomerChoiceMenuEnum.cs" />
     <Compile Include="Actors\CustomerGroup.cs" />
+    <Compile Include="Actors\CustomerStateEnum.cs" />
     <Compile Include="Actors\HotelMaster.cs" />
     <Compile Include="Actors\LineChief.cs" />
-    <Compile Include="Actors\RoomClerk.cs" />
-    <Compile Include="Actors\Waiter.cs" />
     <Compile Include="DiningRoomModel.cs" />
     <Compile Include="Elements\Line.cs" />
     <Compile Include="Elements\Square.cs" />
@@ -67,6 +67,9 @@
       <Project>{ac591b18-2f57-49d5-9535-f26bb12a24ee}</Project>
       <Name>Common-Model</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
