--- a/DiningRoom/DiningRoomCLI/DiningRoom-CLI.csproj
+++ b/DiningRoom/DiningRoomCLI/DiningRoom-CLI.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5B74D63E-C2D6-4E9B-BDC5-118A5A957D18}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{5C380893-F633-4B90-A8C3-DFFD1AAAE08B}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DinnerSimulator.DiningRoom.View</RootNamespace>
-    <AssemblyName>DiningRoomView</AssemblyName>
+    <RootNamespace>DinnerSimulator.DiningRoom.CLI</RootNamespace>
+    <AssemblyName>DiningRoomCLI</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -30,6 +30,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -41,7 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
