--- a/DiningRoom/DiningRoomModel/DiningRoom-Model.csproj
+++ b/DiningRoom/DiningRoomModel/DiningRoom-Model.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{7A138130-5806-4C2B-82EF-A13E134A76D7}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DinnerSimulator.DiningRoom.Model.Actors</RootNamespace>
+    <RootNamespace>DinnerSimulator.DiningRoom.Model</RootNamespace>
     <AssemblyName>DiningRoomModel</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -45,9 +45,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Actors\Customer.cs" />
-    <Compile Include="Actors\CustomerChoiceMenuEnum.cs" />
+    <Compile Include="Actors\CustomerChoiceMenu.cs" />
     <Compile Include="Actors\CustomerGroup.cs" />
-    <Compile Include="Actors\CustomerStateEnum.cs" />
+    <Compile Include="Actors\CustomerState.cs" />
     <Compile Include="Actors\HotelMaster.cs" />
     <Compile Include="Actors\LineChief.cs" />
     <Compile Include="Actors\Waiter.cs" />
