--- a/DiningRoom/DiningRoomView/DiningRoomViewTest/DiningRoom-View-Test.csproj
+++ b/DiningRoom/DiningRoomView/DiningRoomViewTest/DiningRoom-View-Test.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{8CBE1055-92D7-4015-B40E-6537F0E65669}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DiningRoomViewTest</RootNamespace>
+    <RootNamespace>DinnerSimulator.DiningRoom.View.Test</RootNamespace>
     <AssemblyName>DiningRoomViewTest</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
